package yamcsManagement;
option java_package = "org.yamcs.protobuf";

/* Yamcs Management structures and services */
/* Services are used just for reference, no code is being generated (yet) */

import "yamcs.proto";

/*service states coming from guava (numbers have to correspond)*/
enum ServiceState {
   NEW = 0;
   STARTING = 1;
   RUNNING = 2;
   STOPPING = 3;
   TERMINATED = 4;
   FAILED = 5;
}

/************** Yamcs Processor Control service *********************/
/* The ProcessorInfo and ClientInfo events are posted on the yprocInfo address. 
 * There is also a queue with the same name containing the last values
 * The name of the events are yProcessorUpdated (means added or updated),
 * yProcessorRemoved, clientUpdated (means connected or updated) clientDisconnected */
message ProcessorInfo {
    required string instance=1;//yamcs instance 
    required string name=2;
    optional string type=3;
    optional string spec=4;
    optional string creator=5;
    optional bool hasCommanding=6;
    optional ServiceState state=7;
    optional yamcs.ReplayRequest replayRequest=8; //in case of replay 
    optional yamcs.ReplayStatus.ReplayState replayState=9; //in case of replay 
}

message ClientInfo {
    enum ClientState {
        CONNECTED = 0;
        DISCONNECTED = 1;
    }
    required string instance=1;
    required int32 id=2;
    optional string username=3;
    optional string applicationName=4;
    optional string processorName=5;
    optional ClientState state=6;
}

message TmStatistics {
    required string packetName=1;
    optional int64 receivedPackets=2;
    optional int64 lastReceived=3; 
    optional int64 lastPacketTime=4;
    optional int32 subscribedParameterCount=5;
}

message Statistics {
    required string instance=1;
    required string yProcessorName=2;
    repeated TmStatistics tmstats=3;
    optional int64 lastUpdated=4; //java local time of the last update
}

message ProcessorManagementRequest {
    enum Operation {
         CREATE_PROCESSOR = 0;
         CONNECT_TO_PROCESSOR = 1;
    }
    optional Operation operation = 1;
    optional string instance=2; //yamcs instance
    optional string name=3; //processor name
    optional string type=4; //only for CREATE
    optional string spec=5; //only for CREATE
    repeated int32 clientId=6; //for CREATE and CONNECT
    optional bool persistent=7[default=false]; //only for CREATE
    optional yamcs.ReplayRequest replaySpec = 8; //for CREATE as alternative to string spec
}

message ProcessorRequest { //this is used for ProcessorControl service
    enum Operation {
         PAUSE = 2;
         RESUME = 3;
         SEEK = 4;
    }
    optional Operation operation = 1;
    optional string instance=2; //yamcs instance
    optional string name=3; //processor name
    optional int64 seekTime=4; //for SEEK
}

//this is obsolete (but still implemented in HornetQ)
// the operations shall be specified using the ProcessorRequest.Operation defined above
service ProcessorControl {
  rpc CreateProcessor(ProcessorRequest) returns (yamcs.Void);
  rpc ConnectToProcessor(ProcessorRequest) returns (yamcs.Void);
  rpc PauseProcessor(ProcessorRequest) returns (yamcs.Void);
  rpc ResumeProcessor(ProcessorRequest) returns (yamcs.Void);
  rpc SeekProcessor(ProcessorRequest) returns (yamcs.Void);
}

/************** Link Control ****************************/
/*these messages are posted on the linkInfo address.
  there is also a linkInfo queue that contains the last values
*/
message LinkInfo {
    required string instance=1;
    required string name=2;
    optional string type=3;
    optional string spec=4;
    optional string stream=5;
    optional bool disabled=6;
    optional string status=7;
    optional int64 dataCount=8;
    optional string detailedStatus=9;
}

